# aqua-monitor

./: .gitignore  Makefile  README.md  capacitor.config.ts  index.html  package-lock.json  package.json
backend/: .env.exemple  README.md  requirements.txt
backend/app/: config.py  firestore_client.py  main.py  models.py  telemetry_repository.py
backend/app/llm/: answer_agent.py  intent_agent.py  prompt_water_assistant.txt  prompts.py
firmware/: README.md  firmware.ino
frontend/: .env.exemple  README.md  index.html  ionic.config.json  package-lock.json  package.json
frontend/android/app/src/main/res/values/: strings.xml
frontend/src/: App.tsx
frontend/src/components/: ChatbotView.tsx  FloatingButtons.tsx  HeaderCard.tsx  HistoryView.tsx  IdealRangeBar.tsx  MeasureButton.tsx  MetricCard.tsx  Tabs.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: exportTelemetryPdf.ts  firestore.ts  mqtt.ts
frontend/src/types/: telemetry.ts
frontend/src/utils/: idealRanges.ts  parameterConfig.ts
sensor_gateway/: Cargo.toml
sensor_gateway/src/: main.rs  signing.rs
src/: main.tsx
src/components/: HeaderCard.tsx  MetricCard.tsx  Tabs.tsx
src/pages/: Home.tsx
src/services/: firestore.ts
src/styles/: index.css
src/utils/: idealRanges.ts
